[tool.poetry]
name = "cpfg"
version = "0.1.0"
description = "Constant Propagation For Ghidra"
authors = ["Keyv Chan <keyvchan@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
z3-solver = "^4.8.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
